k8s/strategies/shadow/deployment-primary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-primary
  namespace: aceest-devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-app
      role: primary
  template:
    metadata:
      labels:
        app: aceest-app
        role: primary
    spec:
      containers:
        - name: aceest-app
          image: aceest-fitness-gym:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
