k8s/strategies/shadow/deployment-shadow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-shadow
  namespace: aceest-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aceest-app
      role: shadow
  template:
    metadata:
      labels:
        app: aceest-app
        role: shadow
    spec:
      containers:
        - name: aceest-app
          image: aceest-fitness-gym:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
