k8s/strategies/shadow/service-primary.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-primary
  namespace: aceest-devops
spec:
  selector:
    app: aceest-app
    role: primary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
